tests/negative/regression/r34.orng
// r34.orng:6:8: error: expected a value of type `Int`, got a value of type `()`
//     let a: &main
//       ^
// 
fn main() -> Int {
    let a: &main
} 
